<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/layoutNaoZhong"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/white"
    android:padding="30dp"
>
  <DigitalClock
    android:id="@+id/digitalClock"
    android:layout_width="wrap_content"
    android:layout_height="70dp"
    android:textSize="40sp"
    android:textColor="@color/blue"
    android:layout_x="70px"
    android:layout_y="32px"
  />

  <TextView
    android:id="@+id/alertOneTime"
    android:layout_width="wrap_content"
    android:layout_height="70dp"
    android:text="@string/str_title1"
    android:textSize="20sp"
    android:textColor="@color/black"
  >
  </TextView>

  <Button
      android:id="@+id/btnSettingOneTime"
      android:layout_toRightOf="@id/alertOneTime"
      android:layout_width="180dp"
      android:layout_height="80dp"
      android:textSize="18sp"
      android:textColor="@color/black"
      android:text="@string/str_button_setting" />

  <Button
    android:id="@+id/btnDeleteClock"
    android:layout_width="120dp"
    android:layout_height="80dp"
    android:text="@string/str_button2"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:layout_below="@id/btnSettingOneTime"
  >
  </Button>
  <TextView
    android:id="@+id/textRepeat"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:text="@string/str_title2"
    android:textSize="20sp"
    android:textColor="@color/black"
    android:layout_x="10px"
    android:layout_y="212px"
  >
  </TextView>
  <Button
    android:id="@+id/btnRepeatSetting"
    android:layout_width="wrap_content"
    android:layout_height="80px"
    android:text="@string/str_button_setting"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:layout_x="190px"
    android:layout_y="212px"
  >
  </Button>
  <Button
    android:id="@+id/btnDeleteRepeat"
    android:layout_width="wrap_content"
    android:layout_height="120px"
    android:text="@string/str_button2"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:layout_x="190px"
    android:layout_y="249px"
  >
  </Button>
  <TextView
    android:id="@+id/setTime1"
    android:layout_width="wrap_content"
    android:layout_height="120px"
    android:text="string"
    android:textColor="@color/red"
    android:textSize="16sp"
    android:layout_x="10px"
    android:layout_y="142px"
  >
  </TextView>
  <TextView
    android:id="@+id/setTime2"
    android:layout_width="170px"
    android:layout_height="120px"
    android:text="@string/str_default"
    android:textColor="@color/red"
    android:textSize="16sp"
    android:layout_x="10px"
    android:layout_y="252px"
  >
  </TextView>
</LinearLayout>